Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:24+0200\n"
+"PO-Revision-Date: 2010-05-29 11:28+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6004,6 +6004,13 @@ msgid ""
 "protection may not be reliable if your IP belongs to an ISP where thousands "
 "of users, including you, are connected to."
 msgstr ""
+"Ta [a@?page=form&amp;formset=features#tab_Security]možnost[/a] naj bo "
+"onemogočena, saj omogoča napadalcem, da se z načinom bruteforce prijavijo v "
+"kateri koli strežnik MySQL. Če menite, da je to potrebno, uporabite "
+"[a@?page=form&amp;formset=features#tab_Security]seznam zaupanih "
+"proxyjev[/a]. Kakor koli, zaščita temelječa na IP ni zanesljiva, če vaš IP "
+"pripada ISP-ju, na katerega je povezanih tisoče uporabnikov, vključno z "
+"vami."
 
 #: setup/lib/messages.inc.php:19
 msgid "Allow login to any MySQL server"
