Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:28+0200\n"
+"PO-Revision-Date: 2010-05-29 11:32+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6752,6 +6752,10 @@ msgid ""
 "be set to 1800 seconds (30 minutes) at most. Values larger than 1800 may "
 "pose a security risk such as impersonation."
 msgstr ""
+"[a@?page=form&formset=features#tab_Security]Veljavnost prijavnega "
+"piškotka[/a] naj bo nastavljena na največ 1800 sekund (30 minut). Vrednosti "
+"večje od 1800 lahko predstavljajo varnostno tveganje, kot je pretvarjanje za "
+"drugo osebo."
 
 #: setup/lib/messages.inc.php:199
 msgid "Login cookie validity"
