Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -6740,7 +6740,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:196
 msgid "Login cookie store"
-msgstr ""
+msgstr "Shranjevanje prijavnih piškotkov"
 
 #: setup/lib/messages.inc.php:197
 msgid "Define how long (in seconds) a login cookie is valid"
