Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:32+0200\n"
+"PO-Revision-Date: 2010-05-29 11:34+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6737,6 +6737,10 @@ msgid ""
 "and will be deleted as soon as you close the browser window. This is "
 "recommended for non-trusted environments."
 msgstr ""
+"Določa, kako dolgo (v sekundah) naj bo prijavni piškotek shranjen v "
+"brskalniku. Privzeta vrednost 0 pomeni, da bo shranjen samo za obstoječo "
+"sejo in bo izbrisan takoj, ko zaprete okno brskalnika. To je priporočeno za "
+"okolja, ki jim ne zaupate."
 
 #: setup/lib/messages.inc.php:196
 msgid "Login cookie store"
