--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:56+0200\n"
+"PO-Revision-Date: 2010-05-29 11:57+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6446,7 +6446,7 @@ msgstr "Vnesite parametre povezave s strežnikom"
 
 #: setup/lib/messages.inc.php:129
 msgid "Enter login options for signon authentication"
-msgstr ""
+msgstr "Vnesite prijavne možnosti za overovitev signon"
 
 #: setup/lib/messages.inc.php:130
 msgid "Signon login options"
