--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:57+0200\n"
+"PO-Revision-Date: 2010-05-29 11:59+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6458,6 +6458,9 @@ msgid ""
 "[a@../Documentation.html#linked-tables]linked-tables infrastructure[/a] in "
 "documentation"
 msgstr ""
+"Konfigurira zbirko podatkov phpMyAdmin za pridobitev dostopa do dodatnih "
+"funkcij, glej [a@../Documentation.html#linked-tables]infrastrukturo "
+"povezanih tabel[/a] v dokumentaciji"
 
 #: setup/lib/messages.inc.php:132 setup/lib/messages.inc.php:293
 msgid "PMA database"
