Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:59+0200\n"
+"PO-Revision-Date: 2010-05-29 12:01+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6719,6 +6719,10 @@ msgid ""
 "only occurs for the current server. Setting this to FALSE makes it easy to "
 "forget to log out from other servers when connected to multiple servers."
 msgstr ""
+"Če je TRUE, odjava izbriše piškotke za vse strežnike; če je nastavljeno na "
+"FALSE, se odjava izvrši samo za trenutni strežnik. Nastavitev FALSE lahko "
+"hitro povzroči pozabljanje odjavljanja iz ostalih strežnikov, ko ste "
+"povezani na več strežnikov."
 
 #: setup/lib/messages.inc.php:192
 msgid "Delete all cookies on logout"
