Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:01+0200\n"
+"PO-Revision-Date: 2010-05-29 12:02+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6833,7 +6833,7 @@ msgstr "Uporabi samo ikone, samo besedilo ali oboje"
 
 #: setup/lib/messages.inc.php:211
 msgid "Iconic navigation bar"
-msgstr ""
+msgstr "Ikonska navigacijska vrstica"
 
 #: setup/lib/messages.inc.php:214
 msgid "use GZip output buffering for increased speed in HTTP transfers"
