Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:02+0200\n"
+"PO-Revision-Date: 2010-05-29 12:04+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6880,6 +6880,9 @@ msgid ""
 "Enable if you want DB-based query history (requires pmadb). If disabled, "
 "this utilizes JS-routines to display query history (lost by window close)."
 msgstr ""
+"Omogočite, če želite zgodovino poizvedb temelječo na zbirki podatkov "
+"(potrebuje pmadb). Če je onemogočeno, se za prikaz zgodovine poizvedb "
+"uporabi rutina JavaScript (ki se izgubi ob zaprtju okna)."
 
 #: setup/lib/messages.inc.php:227
 msgid "Permanent query history"
