--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:04+0200\n"
+"PO-Revision-Date: 2010-05-29 12:05+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -6914,7 +6914,7 @@ msgstr "Pogon rekodiranja"
 
 #: setup/lib/messages.inc.php:235
 msgid "Try to revert erroneous fields to their default values"
-msgstr ""
+msgstr "Poskusi povrniti zmotna polja na njihove privzete vrednosti"
 
 #: setup/lib/messages.inc.php:236
 msgid "Directory where exports can be saved on server"
