Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:06+0200\n"
+"PO-Revision-Date: 2010-05-29 12:22+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7089,6 +7089,13 @@ msgid ""
 "IP belongs to an ISP where thousands of users, including you, are connected "
 "to."
 msgstr ""
+"Če menite, da je to potrebno, uporabite dodatne nastavitve zaščite – "
+"nastavitve [a@?page=servers&amp;mode=edit&amp;id=%"
+"1$d#tab_Server_config]overovitve gostitelja[/a] in "
+"[a@?page=form&amp;formset=features#tab_Security]seznam zaupanih "
+"proxyjev[/a]. Kakor koli, zaščita temelječa na IP ni zanesljiva, če vaš IP "
+"pripada ISP-ju, na katerega je povezanih tisoče uporabnikov, vključno z "
+"vami."
 
 #: setup/lib/messages.inc.php:273
 msgid "What PHP extension to use; you should use mysqli if supported"
