Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -7118,6 +7118,8 @@ msgid ""
 "Leave blank for no SQL query history support, suggested: [kbd]pma_history[/"
 "kbd]"
 msgstr ""
+"Pustite prazno, če ne želite podpore zgodovine poizvedb SQL; priporočeno: "
+"[kbd]pma_history[/kbd]"
 
 #: setup/lib/messages.inc.php:278
 msgid "SQL query history table"
