--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:26+0200\n"
+"PO-Revision-Date: 2010-05-29 12:34+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7162,6 +7162,8 @@ msgid ""
 "You can use MySQL wildcard characters (% and _), escape them if you want to "
 "use their literal instances, i.e. use 'my\\_db' and not 'my_db'"
 msgstr ""
+"Uporabite lahko nadomestne znake MySQL (% in _); ubežite jih, če jih želite "
+"uporabiti dobesedno, npr. uporabite 'my\\_db' in ne 'my_db'"
 
 #: setup/lib/messages.inc.php:287
 msgid "Show only listed databases"
