--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:37+0200\n"
+"PO-Revision-Date: 2010-05-29 12:38+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7222,7 +7222,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:299
 msgid "SHOW DATABASES command"
-msgstr ""
+msgstr "Ukaz SHOW DATABASES"
 
 #: setup/lib/messages.inc.php:300
 msgid ""
