--- a/po/sl.po
+++ b/po/sl.po
@@ -7281,6 +7281,8 @@ msgid ""
 "Whether a DROP TABLE IF EXISTS statement will be added as first line to the "
 "log when creating a table."
 msgstr ""
+"Ali naj se stavek DROP TABLE IF EXISTS doda kot prva vrstica v dnevnik pri "
+"ustvarjanju tabele."
 
 #: setup/lib/messages.inc.php:310
 msgid "Add DROP TABLE"
