--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:49+0200\n"
+"PO-Revision-Date: 2010-05-29 12:50+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7307,6 +7307,7 @@ msgstr "Uporabite povezave SSL, če jih vaš spletni strežnik podpira"
 #: setup/lib/messages.inc.php:314
 msgid "Socket on which MySQL server is listening, leave empty for default"
 msgstr ""
+"Vtičnica na katero je povezav strežnik MySQL; pustite prezno za privzeto"
 
 #: setup/lib/messages.inc.php:315
 msgid "Server socket"
