--- a/po/sl.po
+++ b/po/sl.po
@@ -7307,7 +7307,7 @@ msgstr "Uporabite povezave SSL, če jih vaš spletni strežnik podpira"
 #: setup/lib/messages.inc.php:314
 msgid "Socket on which MySQL server is listening, leave empty for default"
 msgstr ""
-"Vtičnica na katero je povezan strežnik MySQL; pustite prezno za privzeto"
+"Vtičnica na katero je povezan strežnik MySQL; pustite prazno za privzeto"
 
 #: setup/lib/messages.inc.php:315
 msgid "Server socket"
