--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:50+0200\n"
+"PO-Revision-Date: 2010-05-29 12:51+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7328,7 +7328,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:319
 msgid "PDF schema: table coordinates"
-msgstr ""
+msgstr "PDF-shema: koordinate tabel"
 
 #: setup/lib/messages.inc.php:320
 msgid ""
