--- a/po/sl.po
+++ b/po/sl.po
@@ -7325,6 +7325,8 @@ msgstr "Uporabi SSL"
 msgid ""
 "Leave blank for no PDF schema support, suggested: [kbd]pma_table_coords[/kbd]"
 msgstr ""
+"Pustite prazno, če ne želite podpore PDF-sheme; predlagano: "
+"[kbd]pma_table_coords[/kbd]"
 
 #: setup/lib/messages.inc.php:319
 msgid "PDF schema: table coordinates"
