Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 12:57+0200\n"
+"PO-Revision-Date: 2010-05-29 13:00+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7387,6 +7387,9 @@ msgid ""
 "authentication mode because the password is hard coded in the configuration "
 "file; this does not limit the ability to execute the same command directly"
 msgstr ""
+"Pomnite, da omogočanje tega nima učinka z načinom overovitve "
+"[kbd]config[/kbd], saj je geslo vgrajeno v konfiguracijsko datoteko; to ne "
+"omejuje možnosti izvedbe enakega ukaza neposredno"
 
 #: setup/lib/messages.inc.php:332
 msgid "Show password change form"
