Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:00+0200\n"
+"PO-Revision-Date: 2010-05-29 13:10+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -7463,6 +7463,10 @@ msgid ""
 "['LeftFrameTableSeparator'] directive, so only the folder is called like the "
 "alias, the table name itself stays unchanged"
 msgstr ""
+"Ko je nastavljeno na [kbd]nested[/kbd], je pridevek imena tabele uporabljen "
+"samo za razdružitev/združitev tabel v skladu z določilom "
+"$cfg['LeftFrameTableSeparator'], zato je samo mapa imenovana kot pridevek, "
+"sama imena tabel pa ostanejo nespremenjena"
 
 #: setup/lib/messages.inc.php:348
 msgid "Display table comment instead of its name"
