Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:22+0200\n"
+"PO-Revision-Date: 2010-05-29 13:23+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -235,7 +235,7 @@ msgstr "وبعدها"
 
 #: db_operations.php:451
 msgid "Copy database to"
-msgstr ""
+msgstr "إنسخ قاعدة البيانات إلى"
 
 #: db_operations.php:458 tbl_operations.php:526 tbl_tracking.php:388
 msgid "Structure only"
