Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:23+0200\n"
+"PO-Revision-Date: 2010-05-29 13:25+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -219,7 +219,7 @@ msgstr "تم إعادة تسمية قاعدة البيانات %s إلى %s"
 #: db_operations.php:240
 #, php-format
 msgid "Database %s has been copied to %s"
-msgstr ""
+msgstr "تم نسخ قاعدة البيانات %s إلى %s"
 
 #: db_operations.php:410
 msgid "Rename database to"
