Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:12+0200\n"
+"PO-Revision-Date: 2010-05-29 13:25+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -8051,6 +8051,8 @@ msgid ""
 "You can execute the dump by creating and using a temporary database. Please "
 "ensure that you have the privileges to do so."
 msgstr ""
+"Odložene podatke lahko izvedete z ustvarjanjem in uporabo začasne zbirke "
+"podatkov. Prosimo, prepričajte se, da imate privilegije za ta dejanja."
 
 #: tbl_tracking.php:221
 msgid "Comment out these two lines if you do not need them."
