--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:25+0200\n"
+"PO-Revision-Date: 2010-05-29 13:26+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -8071,7 +8071,7 @@ msgstr "Zapri"
 #: tbl_tracking.php:262
 #, php-format
 msgid "Version %s snapshot (SQL code)"
-msgstr ""
+msgstr "Različica posnetka %s (koda SQL)"
 
 #: tbl_tracking.php:381
 msgid "Tracking statements"
