Translation update done using Pootle.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:25+0200\n"
+"PO-Revision-Date: 2010-05-29 13:26+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -251,7 +251,7 @@ msgstr "بيانات فقط"
 
 #: db_operations.php:468
 msgid "CREATE DATABASE before copying"
-msgstr ""
+msgstr "CREATE DATABASE قبل النسخ"
 
 #: db_operations.php:471 libraries/export/sql.php:52
 #: libraries/export/sql.php:74 libraries/export/sql.php:76
