--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 13:28+0200\n"
+"PO-Revision-Date: 2010-05-29 13:31+0200\n"
 "Last-Translator: Ahmed <aa.mahdawy.10@gmail.com>\n"
 "Language-Team: arabic <ar@li.org>\n"
 "Language: ar\n"
@@ -762,7 +762,7 @@ msgstr ""
 
 #: db_tracking.php:74 tbl_tracking.php:594
 msgid "Created"
-msgstr ""
+msgstr "أنشئ"
 
 #: db_tracking.php:75 tbl_tracking.php:595
 msgid "Updated"
